yama overlays